--- a/bin/competition.yaml
+++ b/bin/competition.yaml
@@ -350,6 +350,26 @@ teams:
   #     properties:
   #     - name: domain
   #       value: test.com
+  # - name: Telnet
+  #   check_name: TelnetCheck
+  #   host: testbed_telnet
+  #   port: 23
+  #   timeout: 15
+  #   points: 100
+  #   accounts:
+  #   - username: ttesterson
+  #     password: testpass
+  #   - username: rpeterson
+  #     password: otherpass
+  #   environments:
+  #   - matching_content: "^SUCCESS"
+  #     properties:
+  #     - name: commands
+  #       value: id;ls -l /home
+  #   - matching_content: PID
+  #     properties:
+  #     - name: commands
+  #       value: ps
 - name: Team2
   color: Blue
   users:
@@ -690,6 +710,26 @@ teams:
   #     properties:
   #     - name: domain
   #       value: test.com
+  # - name: Telnet
+  #   check_name: TelnetCheck
+  #   host: testbed_telnet
+  #   port: 23
+  #   timeout: 15
+  #   points: 100
+  #   accounts:
+  #   - username: ttesterson
+  #     password: testpass
+  #   - username: rpeterson
+  #     password: otherpass
+  #   environments:
+  #   - matching_content: "^SUCCESS"
+  #     properties:
+  #     - name: commands
+  #       value: id;ls -l /home
+  #   - matching_content: PID
+  #     properties:
+  #     - name: commands
+  #       value: ps
 - name: Team3
   color: Blue
   users:
@@ -1030,6 +1070,26 @@ teams:
   #     properties:
   #     - name: domain
   #       value: test.com
+  # - name: Telnet
+  #   check_name: TelnetCheck
+  #   host: testbed_telnet
+  #   port: 23
+  #   timeout: 15
+  #   points: 100
+  #   accounts:
+  #   - username: ttesterson
+  #     password: testpass
+  #   - username: rpeterson
+  #     password: otherpass
+  #   environments:
+  #   - matching_content: "^SUCCESS"
+  #     properties:
+  #     - name: commands
+  #       value: id;ls -l /home
+  #   - matching_content: PID
+  #     properties:
+  #     - name: commands
+  #       value: ps
 - name: Team4
   color: Blue
   users:
@@ -1370,6 +1430,26 @@ teams:
   #     properties:
   #     - name: domain
   #       value: test.com
+  # - name: Telnet
+  #   check_name: TelnetCheck
+  #   host: testbed_telnet
+  #   port: 23
+  #   timeout: 15
+  #   points: 100
+  #   accounts:
+  #   - username: ttesterson
+  #     password: testpass
+  #   - username: rpeterson
+  #     password: otherpass
+  #   environments:
+  #   - matching_content: "^SUCCESS"
+  #     properties:
+  #     - name: commands
+  #       value: id;ls -l /home
+  #   - matching_content: PID
+  #     properties:
+  #     - name: commands
+  #       value: ps
 - name: Team5
   color: Blue
   users:
@@ -1710,6 +1790,26 @@ teams:
   #     properties:
   #     - name: domain
   #       value: test.com
+  # - name: Telnet
+  #   check_name: TelnetCheck
+  #   host: testbed_telnet
+  #   port: 23
+  #   timeout: 15
+  #   points: 100
+  #   accounts:
+  #   - username: ttesterson
+  #     password: testpass
+  #   - username: rpeterson
+  #     password: otherpass
+  #   environments:
+  #   - matching_content: "^SUCCESS"
+  #     properties:
+  #     - name: commands
+  #       value: id;ls -l /home
+  #   - matching_content: PID
+  #     properties:
+  #     - name: commands
+  #       value: ps
 - name: Team6
   color: Blue
   users:
@@ -2050,6 +2150,26 @@ teams:
   #     properties:
   #     - name: domain
   #       value: test.com
+  # - name: Telnet
+  #   check_name: TelnetCheck
+  #   host: testbed_telnet
+  #   port: 23
+  #   timeout: 15
+  #   points: 100
+  #   accounts:
+  #   - username: ttesterson
+  #     password: testpass
+  #   - username: rpeterson
+  #     password: otherpass
+  #   environments:
+  #   - matching_content: "^SUCCESS"
+  #     properties:
+  #     - name: commands
+  #       value: id;ls -l /home
+  #   - matching_content: PID
+  #     properties:
+  #     - name: commands
+  #       value: ps
 - name: Team7
   color: Blue
   users:
@@ -2390,6 +2510,26 @@ teams:
   #     properties:
   #     - name: domain
   #       value: test.com
+  # - name: Telnet
+  #   check_name: TelnetCheck
+  #   host: testbed_telnet
+  #   port: 23
+  #   timeout: 15
+  #   points: 100
+  #   accounts:
+  #   - username: ttesterson
+  #     password: testpass
+  #   - username: rpeterson
+  #     password: otherpass
+  #   environments:
+  #   - matching_content: "^SUCCESS"
+  #     properties:
+  #     - name: commands
+  #       value: id;ls -l /home
+  #   - matching_content: PID
+  #     properties:
+  #     - name: commands
+  #       value: ps
 - name: Team8
   color: Blue
   users:
@@ -2730,6 +2870,26 @@ teams:
   #     properties:
   #     - name: domain
   #       value: test.com
+  # - name: Telnet
+  #   check_name: TelnetCheck
+  #   host: testbed_telnet
+  #   port: 23
+  #   timeout: 15
+  #   points: 100
+  #   accounts:
+  #   - username: ttesterson
+  #     password: testpass
+  #   - username: rpeterson
+  #     password: otherpass
+  #   environments:
+  #   - matching_content: "^SUCCESS"
+  #     properties:
+  #     - name: commands
+  #       value: id;ls -l /home
+  #   - matching_content: PID
+  #     properties:
+  #     - name: commands
+  #       value: ps
 - name: Team9
   color: Blue
   users:
@@ -3070,6 +3230,26 @@ teams:
   #     properties:
   #     - name: domain
   #       value: test.com
+  # - name: Telnet
+  #   check_name: TelnetCheck
+  #   host: testbed_telnet
+  #   port: 23
+  #   timeout: 15
+  #   points: 100
+  #   accounts:
+  #   - username: ttesterson
+  #     password: testpass
+  #   - username: rpeterson
+  #     password: otherpass
+  #   environments:
+  #   - matching_content: "^SUCCESS"
+  #     properties:
+  #     - name: commands
+  #       value: id;ls -l /home
+  #   - matching_content: PID
+  #     properties:
+  #     - name: commands
+  #       value: ps
 - name: Team10
   color: Blue
   users:
@@ -3410,3 +3590,23 @@ teams:
   #     properties:
   #     - name: domain
   #       value: test.com
+  # - name: Telnet
+  #   check_name: TelnetCheck
+  #   host: testbed_telnet
+  #   port: 23
+  #   timeout: 15
+  #   points: 100
+  #   accounts:
+  #   - username: ttesterson
+  #     password: testpass
+  #   - username: rpeterson
+  #     password: otherpass
+  #   environments:
+  #   - matching_content: "^SUCCESS"
+  #     properties:
+  #     - name: commands
+  #       value: id;ls -l /home
+  #   - matching_content: PID
+  #     properties:
+  #     - name: commands
+  #       value: ps
